rke2/spark_operator/manifests/spark-sc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-sc-dev-connect-nodeport
  namespace: spark-operator
spec:
  type: NodePort
  ports:
    - name: spark-connect
      port: 15002
      targetPort: 15002
      nodePort: 30052
      protocol: TCP
  selector:
    spark-role: driver
    spark-app-selector: spark-sc-dev
